fix: Fixed collapse column button style for canEdit=false

--- a/client/src/components/List/List.module.scss
+++ b/client/src/components/List/List.module.scss
@@ -79,6 +79,10 @@
     cursor: pointer;
   }
 
+  .headerNonEditable {
+    cursor: default;
+  }
+
   .headerButton {
     position: relative;
     float: right;
